--- a/docs/LD-001.md
+++ b/docs/LD-001.md
@@ -14,7 +14,11 @@ Subject LD-001 is the central anomaly within the D.I.V.I.D.E. narrative. It is d
 ## Notes:  
 LD-001 has been observed to manipulate the flow of time, events, and even perceptions of reality, making it an unpredictable force. The anomaly often communicates with cryptic messages, veiled threats, and intentional distortions of its own existence.
 
-**Physical Form:** LD-001 currently manifests in a human male form. However, the mechanism by which it can traverse different realities is not fully understood. [DATA EXPUNGED] suggests that its form may not be its true essence, but rather a manifestation shaped by the [REDACTED] of its current reality.
+**Physical Form:** LD-001 currently manifests in a human male form. However, the mechanism by which it can traverse different realities is not fully understood. [DATA EXPUNGED] suggests that its form may not be its true essence, but rather a manifestation shaped by the [REDACTED] of its current reality. 
+
+**UPDATE**  
+LD-001 is always appearing as a human male as of now it is forbidden to aproach or try connect with LD-001 due to LD-000 demands the human species might be eradicated.  
+
 
 **Behavior:** LD-001 rips through realities in seemingly random intervals. It appears to stay within each dimension for an unpredictable duration before shifting to another. Each time it exits a reality, 1-2 anomalies are randomly summoned into our world, each carrying their own distinct danger and unpredictability. [REDACTED] indicates that the summoning may not be random, but a deliberate part of a [DATA EXPUNGED] pattern.
 
