--- a/docs/LD-029.md
+++ b/docs/LD-029.md
@@ -32,7 +32,7 @@ Cannot be destroyed or dismantled by standard methods
 
 Stored in a secured DIVIDE device locker at Site-07  
 
-Testing only permitted on non-essential personnel or D-Class  
+Testing only permitted on non-essential personnel or AT-Class  
 
 Direct exposure limited to no more than once every 2 hours per subject  
 
