--- a/docs/LD-013.md
+++ b/docs/LD-013.md
@@ -23,7 +23,7 @@ Fist-sized leeches
 
 Mosquitoes capable of draining adult humans within seconds  
 
-When contained she has killed in total 4788 people man woman and children lucky she wasnt transported into a huge city if that were the case fatalities might reach 100 000+ APA squad was able to contain it without any fatalities when they arrived but the rampage before than was still seen.  
+Before containmend she has killed in total 4788 people man woman and children lucky she wasn't transported into a city if that were the case fatalities might reach 100 000+ APA squad was able to contain it without any fatalities when they arrived but the rampage before than was still seen.  
 
 **Known Capabilities**  
 
