--- a/docs/LD-030.md
+++ b/docs/LD-030.md
@@ -17,7 +17,7 @@ While LD-030 is resistant to all standard forms of decay or damage, it can be de
 Attempts to freeze, crush, microwave, or chemically dissolve the object have failed.  
 
 **Behavioral Traits**:  
-Self-Regenerating Matter: Instantaneous reformation of consumed parts.  
+**Self-Regenerating Matter**: Instantaneous reformation of consumed parts.  
 
 **Decay Immunity**: Cannot rot, mold, or degrade through time or exposure.  
 
