--- a/docs/LD-031.md
+++ b/docs/LD-031.md
@@ -45,3 +45,11 @@ Personnel experiencing cravings following exposure must be sedated and quarantin
 **Internal Note**:  
 "It doesn’t matter if it’s vodka, rum, or cheap wine from a gas station. Once you drink from LD-031, you’ll want all of it. Every kind of alcohol. Forever. We had a subject try to distill ethanol from cleaning supplies in under 6 hours. Died smiling."  
 — REDACTED  
+
+
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2025-06-10  
