--- a/docs/LD-031.md
+++ b/docs/LD-031.md
@@ -7,7 +7,7 @@
 
 
 
-
+![LD-012 — “The Molded”](https://pbs.twimg.com/media/GtG7_ZBWoAAyvQR?format=jpg&name=large)
 
 
 
@@ -35,7 +35,7 @@ Cognitive and social regression
 Total self-identity collapse (after 48-72 hours untreated)  
 
 **Termination of the effect**:  
-There is no known cure. Psychological therapy, sedation, and memory wipes have failed in all tests. D-class test subjects who survive more than 3 days are placed on monitored alcohol dosing cycles until they expire or are terminated.  
+There is no known cure. Psychological therapy, sedation, and memory wipes have failed in all tests. AT-class test subjects who survive more than 3 days are placed on monitored alcohol dosing cycles until they expire or are terminated.  
 
 **Containment Protocol**:  
 LD-031 is stored in a high-security biomaterial vault at Site-5, within a triple-sealed hazardous item locker. Interaction is only permitted under testing conditions, with Level 3 clearance and higher. Exposure must be approved by the Psychotropic Hazard Board and observed via remote systems only.  
