--- a/docs/LD-032.md
+++ b/docs/LD-032.md
@@ -41,6 +41,8 @@ The area surrounding LD-032 is to be walled off and monitored 24/7 via drone sur
 
 Signs reading “STRUCTURALLY UNSTABLE – DO NOT ENTER” are to be maintained around the perimeter. All footage of public deaths linked to LD-032 has been scrubbed from the internet under Operation [REDACTED].  
 
+If germany were to ever enter a state of war attempt to destroy LD-032 with nuclear warheads has been aproved no matter what the casualties.
+
 **Internal Note:**  
 “Why a car? Why that booth? We’ve had anomalies with ghosts, time loops, even talking corpses. But this thing doesn’t talk. It doesn’t want. It just waits. I stood ten meters away and still felt my teeth hurt.”  
 — Field Agent M. Grath, after LD-032 observation detail  
