--- a/docs/LD-033.md
+++ b/docs/LD-033.md
@@ -2,11 +2,13 @@
 **Classification**: Retribution-Class Entity  
 **Threat Level**: Class III (Lethal to Select Individuals)  
 **Containment Status**: Active, Uncontained  
-**Clearance Level**: DIVIDE Level 3+ Required  
+**Clearance Level**: DIVIDE Level 4+ Required  
 
 
 
+![](https://pbs.twimg.com/media/GtHIghQWwAAfV42?format=jpg&name=large)
 
+"picture taken with a set up security camera"
 
 
 
@@ -35,6 +37,8 @@ When the subject "crosses a final line" (criteria unknown), LD-033 manifests phy
 Currently uncontained. Efforts to identify future targets before escalation are ongoing. Undercover Division agents are embedded in law enforcement agencies to monitor behavior patterns that may trigger LD-033’s activity.  
 
 All police-related fatalities involving vehicle crashes are to be reviewed for signs of LD-033 involvement. If confirmed, affected regions are to be flagged for anomalous surveillance.  
+
+If containment is deemed not worth kill on sight.  
 
 **Internal Note**:
 
