--- a/docs/LD-034.md
+++ b/docs/LD-034.md
@@ -29,7 +29,7 @@ High-velocity kinetic impact tests
 
 A notable engagement involved a specialized 18-man military unit deployed to neutralize LD-034. All operatives were killed with no observable damage inflicted on the entity.   
 
-LD-034 was eventually subdued by BESERK Task Force, who held out until sunrise, at which point the entity entered a dormant state and ceased movement. This weakness to direct sunlight is currently the only known exploitable vulnerability. Controlled experiments have confirmed intense solar exposure and extreme temperatures can cause observable tissue breakdown.  
+LD-034 was eventually subdued by Echo-9 Task Force, who held out until sunrise, at which point the entity entered a dormant state and ceased movement. This weakness to direct sunlight is currently the only known exploitable vulnerability. Controlled experiments have confirmed intense solar exposure and extreme temperatures can cause observable tissue breakdown.  
 
 **Current Containment**:
 LD-034 is currently secured in Sector 77 — Deep Cell 4, a reinforced subterranean chamber designed to:   
