--- a/docs/LD-034.md
+++ b/docs/LD-034.md
@@ -7,7 +7,9 @@
 
 
 
+![](https://pbs.twimg.com/media/Gt_Sgr0WgAAmBsY?format=jpg&name=large) 
 
+"photo was taken with a hand held phone by the person who was stalked"
 
 
 
