--- a/docs/LD-035.md
+++ b/docs/LD-035.md
@@ -17,7 +17,7 @@ Upon wish fulfillment, the subject undergoes a violent and grotesque self-deform
 **Containment Procedures**:  
 LD-035 is currently housed in Vault-89, located 89 floors beneath Site-77 in an isolated, lead-lined chamber equipped with one-way surveillance and triple-sealed airlocks. Access is restricted to Level 4+ clearance with DIVIDE override.  
 
-To avoid spontaneous teleportation or external exposure, LD-035 requires a sacrificial subject once per month. These individuals are to be selected from approved Class D personnel and briefed under false pretenses. If the sacrifice condition is not met, LD-035 relocates to a random global location, resulting in unsanctioned public wish attempts and anomalous art events.  
+To avoid spontaneous teleportation or external exposure, LD-035 requires a sacrificial subject once per month. These individuals are to be selected from approved Class AT personnel and briefed under false pretenses. If the sacrifice condition is not met, LD-035 relocates to a random global location, resulting in unsanctioned public wish attempts and anomalous art events.  
 
 LD-035 has demonstrated the ability to breach containment via reality-folding, particularly for retrieving item-class anomalies relevant to a wish. Surveillance and tracking of LD-035-linked wish events are ongoing.  
 
