--- a/docs/LD-035.md
+++ b/docs/LD-035.md
@@ -6,7 +6,9 @@
 
 
 
+![description](https://pbs.twimg.com/media/GuAdhVAXAAAC8bs?format=jpg&name=large)
 
+"Photo taken by a standart issue phone"  
 
 
 **Description**:  
