--- a/docs/LD-036.md
+++ b/docs/LD-036.md
@@ -1,6 +1,6 @@
 **File: LD-036 — “The Hunters”**  
 **Designation**: Predatory Humanoid Entities / Coordinated Pack Hunters  
-**Threat Level**: Class III  
+**Threat Level**: Class II (If number's outgrow our hunting partie's it is to be raised to class III )   
 **Containment Status**: Partial Containment / Active Extermination Operations  
 **Clearance Level**: DIVIDE Level 3+ Required  
 
