--- a/docs/LD-038.md
+++ b/docs/LD-038.md
@@ -4,6 +4,12 @@
 **Containment Status**: Contained within Vault-38, Sector 12  
 **Clearance Level**: DIVIDE Level 3+ Required for Access  
 
+
+
+![LD-006 — Civilian Photo](https://pbs.twimg.com/media/GvRGECmXQAAhXdW?format=jpg&name=large)  
+
+
+
 🔸 **Description**:  
 LD-038 is a seemingly ordinary commercial-grade coffee machine, branded under a non-existent manufacturer name: "Brewta Dynamics." Despite external appearances, LD-038 can dispense any known liquid, including:  
 
