--- a/docs/LD-038.md
+++ b/docs/LD-038.md
@@ -34,7 +34,7 @@ Upon consumption, LD-038-1 will typically react realistically (e.g., burning whe
 
 LD-038-1 has been observed reforming from total destruction, including incineration and molecular disintegration. Her regeneration is described by on-site researchers as “resetting to a pure, untouched state.”  
 
-She refers to herself simply as "Cora" and insists on maintaining politeness, often expressing offense when drinks are dispensed without proper etiquette.  
+She refers to herself simply as "Cora" .
 
 🔸 **Containment Procedures**:  
 LD-038 and LD-038-1 are stored in Vault-38, under 24/7 observation.  
