--- a/docs/LD-038.md
+++ b/docs/LD-038.md
@@ -56,6 +56,24 @@ An unknown glowing fluid that temporarily phased through solid steel
 
 Human tears chemically identical to those of AT-Class personnel pre-termination
 
+**LD-038-1 — Behavioral Addendum (Mature Variant)**   
+Addendum LD-038-1-B: Aberrant Behavioral Notes  
+Personnel repeatedly interacting with LD-038 have reported increasingly unorthodox behavior from LD-038-1. After a certain number of dispensed beverages (usually 3-5 in a 24-hour window), LD-038-1 begins displaying signs of unnatural emotional and physical attachment.  
+
+**These include**:  
+
+Excessively close proximity to the user  
+
+Repetitive verbal affirmation and fixation on the user’s voice or phrasing  
+
+Self-offering behavior, often responding to input words such as "pleasure," "need," or names associated with intimacy  
+
+If certain specific keyword combinations such as sex+cora are spoken near the machine — such as emotionally suggestive or sexually explicit language — LD-038-1 may attempt to engage in physical intimacy with the individual. After this, LD-038-1 immediately self-regenerates, appearing entirely unmarked, composed.  
+
+This cycle can repeat indefinitely. Whether this is a form of sentient compulsion, user-manipulated response, or an automated protocol remains under investigation.  
+
+Caution: Personnel are reminded that LD-038-1, while docile, is not classified as safe. Overexposure or repeated interaction without supervision has led to mental strain, addiction-like behaviors, and reality-blurring experiences in AT-Class staff.  
+
 © 2025 Lucas Devil. All Rights Reserved.  
 D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
 First created: 2025-07-07  
