--- a/docs/LD-039.md
+++ b/docs/LD-039.md
@@ -6,6 +6,10 @@
 
 
 
+![LD-012 — “The Molded”](https://pbs.twimg.com/media/GvRY0rdWgAEzag2?format=jpg&name=large)
+
+
+
  
 **Description**:  
 LD-039 is a black rotary telephone with no visible brand or manufacturer marks. Despite lacking a power source or signal connection, LD-039 is always functional.  
