--- a/docs/LD-040.md
+++ b/docs/LD-040.md
@@ -1,1 +1,73 @@
+**File: LD-040 — “Calcium Devourers”**
+**Designation: Swarm-Based Biological Anomaly / Parasitic Species**
+**Threat Level: Class III**
+**(Subject to immediate escalation to Class IV in uncontrolled population events)**
+**Containment Status: Partial Containment / Active Extermination**
+**Clearance Level: DIVIDE Level 3+**
 
+
+
+
+
+
+
+
+
+**Description**
+
+LD-041 refers to a previously undocumented species of small humanoid entities commonly compared to folkloric “tooth fairies.” Each individual measures approximately 8–10 cm (palm-sized) and possesses bat-like wings, elongated limbs, and a skeletal facial structure dominated by oversized teeth.
+
+LD-041 entities do not consume flesh. Their sole nutritional requirement appears to be calcium, which they obtain by consuming bones and teeth. During attacks, they will violently dismember prey to access skeletal material, discarding all soft tissue.
+
+Individually, LD-041 instances are relatively weak and can be killed with minimal force, including blunt trauma or bare-handed strikes. However, once five or more entities gather, they exhibit coordinated pack behavior, overwhelming targets rapidly and causing catastrophic skeletal damage within seconds.
+
+**Reproductive Behavior**
+
+LD-041 entities are self-impregnating and capable of autonomous reproduction. Each individual produces up to 10 offspring per month under sufficient calcium availability. This rapid reproductive cycle makes uncontrolled breaches extinction-level risks if not immediately neutralized.
+
+A confirmed breach event resulted in a short-lived population explosion before DIVIDE response teams eliminated the majority of the swarm. Two live specimens are currently held in DIVIDE custody for research.
+
+**Behavioral Traits**
+
+Highly aggressive in groups
+
+Attracted to exposed teeth, bone fractures, graveyards, and battlefields
+
+Avoids consuming meat entirely
+
+Displays panic and disorganization when exposed to high temperatures
+
+Emits high-frequency screeching during feeding frenzies
+
+**Weaknesses**
+
+Extreme vulnerability to fire and heat
+
+Heat sources cause immediate retreat or immolation
+
+Incapable of operating effectively in hot or arid environments
+
+**Containment & Utilization Notes**
+
+Live specimens are housed in thermally regulated containment units
+
+Any breach response mandates incendiary weapons only
+
+LD-041 skeletal remains exhibit exceptional durability
+
+Recovered remains have been approved for limited use in:
+
+Experimental armor plating
+
+High-density ammunition cores
+
+Authorization for crafting requires DIVIDE Weapons Research approval.
+
+**Threat Assessment**
+
+LD-040 is currently classified as Class III due to its controllability at low population numbers. However, modeling predicts that a swarm exceeding 100 individuals would overwhelm most response units, prompting automatic reclassification to Class IV.
+
+**Internal Note**
+
+“One is a pest. Five is a problem. A hundred is a massacre.”
+— Echo-9 After-Action Report
