--- a/docs/LD-040.md
+++ b/docs/LD-040.md
@@ -7,8 +7,16 @@
 
 
 
-![LD-040 — “Calcium Devourers”](https://pbs.twimg.com/media/G-UVRYsW0AAcAzW?format=jpg&name=large)
+![LD-040 — “Calcium Devourers”](https://pbs.twimg.com/media/G-UVRYsW0AAcAzW?format=jpg&name=large)   
+"The Image Of Their Containment Cell"  
 
+
+
+
+
+
+![LD-040 — “Calcium Devourers”](https://pbs.twimg.com/media/G-UVwFQXIAAD221?format=jpg&name=large)  
+"Image containing The Official Document"  
 
 
 
