--- a/docs/LD-040.md
+++ b/docs/LD-040.md
@@ -79,3 +79,9 @@ LD-040 is currently classified as Class III due to its controllability at low po
 
 “One is a pest. Five is a problem. A hundred is a massacre.”   
 — Echo-9 After-Action Report   
+
+
+
+© 2025 Lucas Devil. All Rights Reserved.  
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.  
+First created: 2026-01-10    
