--- a/docs/LD-041.md
+++ b/docs/LD-041.md
@@ -1,1 +1,67 @@
+**File: LD-041 — “The Crow Guard”**   
+**Designation: Humanoid Anomalous Entity / Armed Sentinel**   
+**Threat Level: Class II**   
+**Containment Status: Active Monitoring / Kill-on-Sight if Hostile**   
+**Clearance Level: DIVIDE Level 2+**   
 
+**Description:**   
+
+LD-041 is a humanoid entity standing approximately 190–200 cm tall. Its most defining feature is a steel crow-beak mask, permanently affixed to the head. The mask is mechanically hinged and can open along the beak seam. When opened, the interior reveals no face—only exposed muscle, bone, and undefined dark tissue   
+
+LD-041 wears layered, dark, utilitarian clothing reinforced with unknown alloys. The entity carries two bladed weapons:   
+
+Primary Weapon: A massive, rectangular greatsword measuring approximately 160 cm in length. The blade is blunt-edged yet capable of catastrophic crushing force   
+
+Secondary Weapon: A smaller sword carried across the back, used rarely and primarily when the primary weapon is lost or unusable   
+
+The entity demonstrates physical strength approximately twice that of the strongest recorded human, allowing it to lift, throw, and crush objects well beyond normal limits. Despite this, LD-041 does not exhibit enhanced speed, regeneration, or reality-altering abilities  
+
+LD-041 is biologically killable  
+
+**Behavioral Traits:**  
+
+Silent at all times; no vocalizations recorded  
+
+Displays disciplined, almost military-like movement patterns  
+
+Rarely pursues targets beyond a fixed perimeter  
+
+Exhibits guarding behavior, suggesting it protects a location, object, or entity currently unidentified  
+
+Will not attack unless a perceived boundary is crossed  
+
+When engaging a target at close range, LD-041 has been observed opening its beak-mask and using its bare hands to forcibly remove the victim’s head. This action appears intentional and ritualistic rather than necessary for combat.  
+
+**Combat & Vulnerabilities:**  
+
+LD-041 is resilient but not heavily armored.  
+
+9×19mm rounds: Ineffective unless concentrated; average of 8–10 rounds to the chest required to neutralize  
+
+Rifle calibers (5.56, 7.62): Highly effective  
+
+**Recommended tactic: Disable the legs to force collapse, followed by termination**  
+
+No resistance to explosives, fire, or heavy weaponry noted  
+
+Autopsy reports indicate no anomalous organs beyond increased muscle density and reinforced skeletal structure.  
+
+**Containment Protocol:**  
+
+LD-041 is not currently held in containment. All known encounters occurred near unidentified guarded locations, which are under investigation.  
+
+**Standing orders:**  
+
+Do not attempt capture unless guarding objective is identified  
+
+Engage only if LD-041 becomes hostile  
+
+Recovery of weapons is authorized for research purposes  
+
+Any area repeatedly associated with LD-041 sightings is to be flagged as a potential high-value anomaly site.  
+
+**Internal Note:**  
+
+“It’s not a monster. It’s a sentry.  
+And sentries don’t stand watch for nothing.”  
+— Echo-9 Recon Report  
