--- a/docs/LD-041.md
+++ b/docs/LD-041.md
@@ -4,6 +4,12 @@
 **Containment Status: Active Monitoring / Kill-on-Sight if Hostile**   
 **Clearance Level: DIVIDE Level 2+**   
 
+
+![Crow Guard](https://pbs.twimg.com/media/G-0DjKcWgAAhfYv?format=jpg&name=large)
+"Image Taken By Photographer"  
+
+
+
 **Description:**   
 
 LD-041 is a humanoid entity standing approximately 190–200 cm tall. Its most defining feature is a steel crow-beak mask, permanently affixed to the head. The mask is mechanically hinged and can open along the beak seam. When opened, the interior reveals no face—only exposed muscle, bone, and undefined dark tissue   
