--- a/docs/LD-041.md
+++ b/docs/LD-041.md
@@ -34,7 +34,11 @@ Rarely pursues targets beyond a fixed perimeter
 
 Exhibits guarding behavior, suggesting it protects a location, object, or entity currently unidentified  
 
+The location it protect's has yet to be fully explored   
+
 Will not attack unless a perceived boundary is crossed  
+
+Is guarding some form of a steel door when killed within 10 minutes another will come from said door drag his corpse back and stand guard again  
 
 When engaging a target at close range, LD-041 has been observed opening its beak-mask and using its bare hands to forcibly remove the victim’s head. This action appears intentional and ritualistic rather than necessary for combat.  
 
@@ -51,6 +55,8 @@ Rifle calibers (5.56, 7.62): Highly effective
 No resistance to explosives, fire, or heavy weaponry noted  
 
 Autopsy reports indicate no anomalous organs beyond increased muscle density and reinforced skeletal structure.  
+
+Do not shoot for the head it is heavily armored  
 
 **Containment Protocol:**  
 
@@ -71,3 +77,10 @@ Any area repeatedly associated with LD-041 sightings is to be flagged as a poten
 “It’s not a monster. It’s a sentry.  
 And sentries don’t stand watch for nothing.”  
 — Echo-9 Recon Report  
+
+
+
+
+© 2026 Lucas Devil. All Rights Reserved.
+D.I.V.I.D.E.™ and all related characters, storylines, and assets are original creations of Lucas Devil.
+First created: 2026-01-16
