--- a/docs/LD-041.md
+++ b/docs/LD-041.md
@@ -10,6 +10,11 @@
 
 
 
+
+![Crow Guard](https://pbs.twimg.com/media/G-0GS9ZXwAA5FOD?format=jpg&name=large)
+"Image Taken When AT-Class Was Send To Die By Getting His Head Eaten"  
+
+
 **Description:**   
 
 LD-041 is a humanoid entity standing approximately 190–200 cm tall. Its most defining feature is a steel crow-beak mask, permanently affixed to the head. The mask is mechanically hinged and can open along the beak seam. When opened, the interior reveals no face—only exposed muscle, bone, and undefined dark tissue   
