--- a/docs/LD-042.md
+++ b/docs/LD-042.md
@@ -106,7 +106,7 @@ Due to catastrophic collateral impact, nuclear termination is classified as an a
 
 16,877 conventional personnel lost  
 
-Containment & Regulation Policy  
+**Containment & Regulation Policy**  
 
 **LD-042 specimens are to remain undisturbed unless one or more of the following conditions are met:**  
 
@@ -121,7 +121,7 @@ All termination actions require DIVIDE High Command authorization.
 **Strategic Limitation Notice:**  
 Projected geopolitical tolerance permits termination of no more than two adult specimens without destabilizing global nuclear equilibrium.  
 
-Secondary Exploitation  
+**Secondary Exploitation**  
 
 **Dermal Plating:**  
 
