--- a/docs/LD-042.md
+++ b/docs/LD-042.md
@@ -154,6 +154,8 @@ One juvenile LD-042 specimen has been approved for off-world relocation to Mars 
 
 Long-term termination viability: Unknown.  
 
+**THIS IS THE SECOND EVER TIER IV ANOMALY EVER RECORDED**  
+
 **Internal Memorandum**  
 
 “They are not monsters.  
