--- a/docs/LD-042.md
+++ b/docs/LD-042.md
@@ -5,7 +5,8 @@
 **Clearance Required: DIVIDE Level 4+**  
 
 
-
+![description](https://pbs.twimg.com/media/G_hWx3_WQAAYgf1?format=jpg&name=large)  
+"Female LD-042 first contact"  
 
 
 
