--- a/docs/LD-042.md
+++ b/docs/LD-042.md
@@ -10,6 +10,11 @@
 
 
 
+![description](https://pbs.twimg.com/media/G_hXdvfWgAA5jDS?format=jpg&name=large)  
+"Male LD-042 first contact"  
+
+
+
 **Containment Status:**  
 Uncontained — Population Regulated  
 
