--- a/docs/LD-042.md
+++ b/docs/LD-042.md
@@ -1,4 +1,4 @@
-***File: LD-042***  
+***File: LD-042 -- “The Earth Devourers”***  
 **Codename: “The Earth Devourers”**  
 **Classification: Planetary-Scale Biological Anomaly / Megafauna**  
 **Threat Level: Class IV (High-Risk Tier)**  
